@@ -1,5 +1,6 @@
 import QtQuick 1.1
 import "../"
+import "../../"
 
 Tank {
     unitType: "Test tank 2"
@@ -19,5 +20,33 @@ Tank {
 
     Tank_tst2_turret {
         id: turret
+    }
+
+    // This should be redesigned into a C++ property
+    Item {
+        id: soldierContainer
+
+        Soldier {
+            role: "Commander"
+        }
+
+        Soldier {
+            role: "Gunner"
+        }
+
+        Soldier {
+            role: "Loader"
+        }
+
+        Soldier {
+            role: "Assistant"
+        }
+    }
+
+    Component.onCompleted: {
+        var allSoldiers = soldierContainer.children;
+        for (var i = 0; i < allSoldiers.length; i++) {
+            addSoldier(allSoldiers[i]);
+        }
     }
 }
