@@ -1,5 +1,6 @@
 import QtQuick 1.1
 import "../"
+import "../../"
 
 Tank {
     id: root
@@ -24,5 +25,33 @@ Tank {
         bodyTexture: PWD + "img/units/tanks/generic/tank_tst3_turret_main.png"
         barrelBaseTexture: PWD + "img/units/tanks/generic/turret_barrelBase.png"
         barrelSegment1Texture: PWD + "img/units/tanks/generic/turret_barrelSegment1_tank_tst3.png"
+    }
+
+    // This should be redesigned into a C++ property
+    Item {
+        id: soldierContainer
+
+        Soldier {
+            role: "Commander"
+        }
+
+        Soldier {
+            role: "Gunner"
+        }
+
+        Soldier {
+            role: "Loader"
+        }
+
+        Soldier {
+            role: "MG gunner"
+        }
+    }
+
+    Component.onCompleted: {
+        var allSoldiers = soldierContainer.children;
+        for (var i = 0; i < allSoldiers.length; i++) {
+            addSoldier(allSoldiers[i]);
+        }
     }
 }
