@@ -5,11 +5,13 @@ Quite a lot of basic engine stuff was done before this changelog was created. So
 === === === ===
 30.11.2011:
  - add sliding BottomMenu (pretty crude implementation, but works)
+ - add soldier menu
+ - add single soldiers within a unit
 
 29.11.2011:
  - add stop to context menu entry
  - make context menu grid based
- - add zoom in and zoom out keyboar binding ('=' and '-' respectively)
+ - add zoom in and zoom out keyboard binding ('=' and '-' respectively)
  - parametrised SimpleInfoBox
  - add TopMenu (with new ZoomBox, MenuEntry, PopUpArrow elements)
  - add "Follow" to context menu
